--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Travel Schmravel</title>
+    <title>Go Travel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
